# jellyhook

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  docker-compose.yaml  genre_mappings.example.json  item_added_hook.example.json  jellyhook.code-workspace  jellyhook.example.json  ruff.toml
api/: .dockerignore  Dockerfile  README.md  pyproject.toml
api/src/api/: app.py  config.py  logging.py  main.py  rabbitmq.py  routes.py
api/src/api/hooks/: items.py
api/tests/: conftest.py  test_rabbitmq.py
api/tests/hooks/: test_items.py
workers/: Dockerfile  Dockerfile.testenv  README.md  pyproject.toml
workers/src/workers/: config.py  errors.py  logger.py  main.py  movie.py  orchestrator.py  utils.py
workers/src/workers/clients/: jellyfin.py  rabbitmq.py
workers/src/workers/config/: __init__.py  constants.py  worker_config.py
workers/src/workers/hooks/: __init__.py  item_added.py
workers/src/workers/models/: items.py
workers/src/workers/parsers/: __init__.py  base.py
workers/src/workers/services/: __init__.py  dovi_conversion.py  genre_modification.py  media_track_clean.py  metadata_update.py  orchestrator.py  playlist_assignment.py  service_base.py
workers/tests/: conftest.py  pytest.ini  test_movie.py  test_utils.py
workers/tests/component/: conftest.py
workers/tests/component/services/: test_dovi_conversion_component.py  test_dovi_conversion_integration.py  test_media_track_clean_component.py
workers/tests/parsers/: test_standard.py  test_trash.py
workers/tests/services/: test_dovi_conversion.py  test_genre_modification.py  test_metadata_update.py  test_service_base.py
workers/tests/unit/: conftest.py  test_main.py  test_utils.py
workers/tests/unit/clients/: test_rabbitmq.py
workers/tests/unit/config/: test_worker_config.py
workers/tests/unit/models/: test_items.py
workers/tests/unit/parsers/: test_fallback.py  test_trash.py
workers/tests/unit/services/: test_dovi_conversion.py  test_media_track_clean.py  test_metadata_update.py  test_orchestrator.py  test_playlist_assignment.py  test_service_base.py
(+14 files in other folders)
