[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jellyhook_api"
version = "0.1.0"
description = "The API server for Jellyfin webhooks."
requires-python = ">=3.13"
readme = "README.md"

dependencies = [
    "flask<4.0.0,>=3.1.0",
    "gunicorn<24.0.0,>=23.0.0",
    "loguru<1.0.0,>=0.7.3",
    "pika<2.0.0,>=1.3.2",
]

[dependency-groups]
dev = [
    "debugpy<2.0.0,>=1.8.12",
    "ipython<9.0.0,>=8.31.0",
    "mypy<2.0.0,>=1.15.0",
    "pytest<9.0.0,>=8.3.4",
    "pytest-cov>=6.1.1",
    "ruff<1.0.0,>=0.9.9",
]


[tool.pytest.ini_options]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["src/api"]
