[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jellyhook_worker"
version = "0.1.0"
description = "The worker service for Jellyfin webhooks."
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    "loguru<1.0.0,>=0.7.3",
    "pika<2.0.0,>=1.3.2",
]

[dependency-groups]
dev = [
    "debugpy<2.0.0,>=1.8.12",
    "ipython<9.0.0,>=8.31.0",
    "mypy<2.0.0,>=1.15.0",
    "pytest<9.0.0,>=8.3.4",
    "ruff<1.0.0,>=0.9.9",
]


[tool.pytest.ini_options]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["src/workers"]
