[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jellyhook_worker"
version = "0.1.0"
description = "The worker service for Jellyfin webhooks."
requires-python = ">=3.13"
readme = "README.md"

dependencies = [
    "jellyfin-apiclient-python>=1.11.0",
    "loguru<1.0.0,>=0.7.3",
    "pika<2.0.0,>=1.3.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "debugpy<2.0.0,>=1.8.12",
    "ipython>=8.31.0,<9.0.0",
    "mypy<2.0.0,>=1.15.0",
    "pytest<9.0.0,>=8.3.4",
    "pytest-cov>=6.1.1",
    "ruff<1.0.0,>=0.9.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/workers"]
